# integral-calculator

./: CMakeLists.txt  README.md  calculate.sh
logs/: logs.txt
src/integral/: calculate.cpp  calculate.h  function.cpp  function.h  main.cpp
src/rewrite-function/: main.cpp
